# deepframe

./: .gitignore  README.md  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: wheel-build.yaml
cmake/modules/: findFFmpeg.cmake  url_max_length_fix.patch
cpp/: CMakeLists.txt  buffer.hpp  python_bindings.cpp  vcpkg.json  video.cpp  video.hpp
deepframe/: __init__.py
pyvframe/: __init__.py
scripts/: build.py  patch_ffmpeg.py
scripts/build_scripts/: get_creds.sh  manage_cache.py  upload_wheels.py
tests/: test_frame_position.py  test_video_frames.py  test_video_info.py
